k8s/mongo-service-load.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service-load
spec:
  type: LoadBalancer
  selector:
    app: mongo
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 27017
      targetPort: 27017
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      #nodePort: 30007
